<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#603939"
    tools:context=".ChooserActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:backgroundTint="#603939"
        android:backgroundTintMode="add"
        android:text="@string/back_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="95dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:text="@string/peperoni"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rubrik2" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="95dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:text="@string/salami"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBox1"
        app:layout_constraintTop_toTopOf="@+id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="95dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="240dp"
        android:text="@string/vitl_k"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toStartOf="@+id/checkBox4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="95dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="240dp"
        android:text="@string/tabasco"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toTopOf="@+id/checkBox3" />

    <EditText
        android:id="@+id/Rubrik2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ingredienser"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

